Bug 136856 - Dragging items between desktops not controlable with enabled active desktop borders
Summary: Dragging items between desktops not controlable with enabled active desktop b...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: core (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 301291 (view as bug list)
Depends on:
Blocks:
 
Reported: 2006-11-04 23:57 UTC by Thomas McGuire
Modified: 2012-06-24 17:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2006-11-04 23:57:46 UTC
Version:            (using KDE KDE 3.5.5)
Installed from:    Ubuntu Packages
OS:                Linux

With enabled Active Desktop Borders (Always enabled, 100 msec delay), dragging something, e.g. an icon from the desktop, to another virtual desktop behaves strange.

When I move the cursor to the desktop border, nothing happens. I have to continue moving the mouse to the direction of the border, even though the cursor is already there, to make the virtual desktops switch.
Because I have to continue to move the mouse, these movements are continued after the desktop switch, possibly leading to multiple desktops switches.
This makes controlling desktop switches when dragging something nearly impossible.

Dragging windows works fine.
Switching desktops without dragging anything as well.

Example:
You need 3 desktops for this, all arranged horizontally in the same row.
Go to desktop 1, grab any icon of the desktop and try dragging it to the right desktop neighbor, desktop 2. You'll notice that you have to continue moving your mouse to the right to make it switch happen eventually. After that, the cursor immediately jumps to the rightmost position of desktop 2, leading to a possible unwanted switch to desktop 3.

I hope I could make myself clear.
Comment 1 FiNeX 2010-10-10 14:21:04 UTC
The bug is a bit different on KDE4: dragging an icon never trigger the change desktop moving the cursor on any edge of the screen.
Comment 2 Thomas Lübking 2012-06-06 16:35:29 UTC
*** Bug 301291 has been marked as a duplicate of this bug. ***
Comment 3 Thomas Lübking 2012-06-14 20:50:07 UTC
https://git.reviewboard.kde.org/r/105254/
Comment 4 Thomas Lübking 2012-06-16 19:56:06 UTC
Sidenote, i figured (while trying to avoid dolphin crashing when withdrawing the input window) that gtk+ applications do NOT grab the mouse on drag and drop (ie. grabbing it is likely what causes the Qt issues)
Comment 5 Thomas Lübking 2012-06-24 17:42:40 UTC
Git commit c1cbb499d011227bffe174d721a164606f2e8bd6 by Thomas Lübking.
Committed on 14/06/2012 at 22:40.
Pushed by luebking into branch 'master'.

force instant reaction for dnd border events
FIXED-IN: 4.9
REVIEW: 105254

M  +3    -3    kwin/screenedge.cpp
M  +2    -1    kwin/screenedge.h

http://commits.kde.org/kde-workspace/c1cbb499d011227bffe174d721a164606f2e8bd6