force instant reaction for dnd border events

BUG: 136856
FIXED-IN: 4.9
REVIEW: 105254